# github-actions-release-cache-workaround-rust

./: Cargo.toml  README.md
.github/workflows/: release.yaml
src/: main.rs
