[package]
name = "github-actions-release-cache-workaround-rust"
description = "Test application with some dependencies in order to achieve some compile time for release"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9"
structopt = "0.3"
paw-structopt = "1"
paw = "1"
